(include_subdirs qualified)

(env (_ (env-vars (INSIDE_DUNE "1"))))

(coq.theory
 (name CraneTestsMonadic)
 (synopsis "Tests for the rocq-crane plugin")
 (modules :standard)
 (theories Stdlib Crane ITree ExtLib Paco)
 (flags (:standard -output-directory %{project_root}/tests/monadic)))

; Test rules - compile C++ and run tests














































(subdir bind_type_inference
 (rule
  (targets bind_type_inference.t.exe)
  (deps BindTypeInference.vo bind_type_inference.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} bind_type_inference.t.exe bind_type_inference.cpp bind_type_inference.t.cpp)))
 (rule
  (alias runtest)
  (deps bind_type_inference.t.exe)
  (action (run ./bind_type_inference.t.exe))))

(subdir free_monad
 (rule
  (targets free_monad.t.exe)
  (deps FreeMonad.vo free_monad.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} free_monad.t.exe free_monad.cpp free_monad.t.cpp)))
 (rule
  (alias runtest)
  (deps free_monad.t.exe)
  (action (run ./free_monad.t.exe))))

(subdir io
 (rule
  (targets io.t.exe)
  (deps IOtest.vo io.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} io.t.exe io.cpp io.t.cpp)))
 (rule
  (alias runtest)
  (deps io.t.exe)
  (action (run ./io.t.exe))))

(subdir mutable_vector
 (rule
  (targets mutable_vector.t.exe)
  (deps MutableVectorTest.vo mutable_vector.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} mutable_vector.t.exe mutable_vector.cpp mutable_vector.t.cpp)))
 (rule
  (alias runtest)
  (deps mutable_vector.t.exe)
  (action (run ./mutable_vector.t.exe))))

(subdir parallel
 (rule
  (targets parallel.t.exe)
  (deps ParallelTest.vo parallel.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} parallel.t.exe parallel.cpp parallel.t.cpp)))
 (rule
  (alias runtest)
  (deps parallel.t.exe)
  (action (run ./parallel.t.exe))))

(subdir stm_hash_map_bde
 (rule
  (targets stm_hash_map_bde.t.exe)
  (deps StmHashMap.vo stm_hash_map_bde.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-bde.sh %{project_root} stm_hash_map_bde.t.exe stm_hash_map_bde.cpp stm_hash_map_bde.t.cpp)))
 (rule
  (alias runtest)
  (deps stm_hash_map_bde.t.exe)
  (action (run ./stm_hash_map_bde.t.exe))))

(subdir stm_hash_map
 (rule
  (targets stm_hash_map.t.exe)
  (deps StmHashMap.vo stm_hash_map.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} stm_hash_map.t.exe stm_hash_map.cpp stm_hash_map.t.cpp)))
 (rule
  (alias runtest)
  (deps stm_hash_map.t.exe)
  (action (run ./stm_hash_map.t.exe))))

(subdir stm
 (rule
  (targets stm.t.exe)
  (deps STMtest.vo stm.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} stm.t.exe stm.cpp stm.t.cpp)))
 (rule
  (alias runtest)
  (deps stm.t.exe)
  (action (run ./stm.t.exe))))

(subdir thread
 (rule
  (targets thread.t.exe)
  (deps Threadtest.vo thread.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} thread.t.exe thread.cpp thread.t.cpp)))
 (rule
  (alias runtest)
  (deps thread.t.exe)
  (action (run ./thread.t.exe))))

(subdir monadic
 (rule
  (targets monadic.t.exe)
  (deps Monadic.vo monadic.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} monadic.t.exe monadic.cpp monadic.t.cpp)))
 (rule
  (alias runtest)
  (deps monadic.t.exe)
  (action (run ./monadic.t.exe))))

(subdir itree_effects
 (rule
  (targets itree_effects.t.exe)
  (deps ITreeEffects.vo itree_effects.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} itree_effects.t.exe itree_effects.cpp itree_effects.t.cpp)))
 (rule
  (alias runtest)
  (deps itree_effects.t.exe)
  (action (run ./itree_effects.t.exe))))

(subdir itree_reified
 (rule
  (targets itree_reified.t.exe)
  (deps ITreeReified.vo itree_reified.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} itree_reified.t.exe itree_reified.cpp itree_reified.t.cpp)))
 (rule
  (alias runtest)
  (deps itree_reified.t.exe)
  (action (run ./itree_reified.t.exe))))

