(include_subdirs qualified)

(env (_ (env-vars (INSIDE_DUNE "1"))))

(coq.theory
 (name CraneTestsRegression)
 (synopsis "Tests for the rocq-crane plugin")
 (modules :standard) ; automatically includes all .v files in this directory
 (theories
   Stdlib
   Crane
   Equations)
 (flags (:standard -output-directory %{project_root}/tests/regression)))

; Test rules - compile C++ and run tests

(subdir bool_ops
 (rule
  (targets bool_ops.t.exe)
  (deps BoolOps.vo bool_ops.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} bool_ops.t.exe bool_ops.cpp bool_ops.t.cpp)))
 (rule
  (alias runtest)
  (deps bool_ops.t.exe)
  (action (run ./bool_ops.t.exe))))

(subdir currying
 (rule
  (targets currying.t.exe)
  (deps Currying.vo currying.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} currying.t.exe currying.cpp currying.t.cpp)))
 (rule
  (alias runtest)
  (deps currying.t.exe)
  (action (run ./currying.t.exe))))

(subdir deep_match
 (rule
  (targets deep_match.t.exe)
  (deps DeepMatch.vo deep_match.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} deep_match.t.exe deep_match.cpp deep_match.t.cpp)))
 (rule
  (alias runtest)
  (deps deep_match.t.exe)
  (action (run ./deep_match.t.exe))))

(subdir higher_order
 (rule
  (targets higher_order.t.exe)
  (deps HigherOrder.vo higher_order.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} higher_order.t.exe higher_order.cpp higher_order.t.cpp)))
 (rule
  (alias runtest)
  (deps higher_order.t.exe)
  (action (run ./higher_order.t.exe))))

(subdir implicit_args
 (rule
  (targets implicit_args.t.exe)
  (deps ImplicitArgs.vo implicit_args.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} implicit_args.t.exe implicit_args.cpp implicit_args.t.cpp)))
 (rule
  (alias runtest)
  (deps implicit_args.t.exe)
  (action (run ./implicit_args.t.exe))))

(subdir lambda
 (rule
  (targets lambda.t.exe)
  (deps Lambda.vo lambda.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} lambda.t.exe lambda.cpp lambda.t.cpp)))
 (rule
  (alias runtest)
  (deps lambda.t.exe)
  (action (run ./lambda.t.exe))))

(subdir let_in
 (rule
  (targets let_in.t.exe)
  (deps BenchLetIn.vo let_in.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} let_in.t.exe let_in.cpp let_in.t.cpp)))
 (rule
  (alias runtest)
  (deps let_in.t.exe)
  (action (run ./let_in.t.exe))))

(subdir nested_inductive
 (rule
  (targets nested_inductive.t.exe)
  (deps NestedInductive.vo nested_inductive.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} nested_inductive.t.exe nested_inductive.cpp nested_inductive.t.cpp)))
 (rule
  (alias runtest)
  (deps nested_inductive.t.exe)
  (action (run ./nested_inductive.t.exe))))

(subdir option
 (rule
  (targets option.t.exe)
  (deps Option.vo option.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} option.t.exe option.cpp option.t.cpp)))
 (rule
  (alias runtest)
  (deps option.t.exe)
  (action (run ./option.t.exe))))

(subdir prop_erasure
 (rule
  (targets prop_erasure.t.exe)
  (deps PropErasure.vo prop_erasure.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} prop_erasure.t.exe prop_erasure.cpp prop_erasure.t.cpp)))
 (rule
  (alias runtest)
  (deps prop_erasure.t.exe)
  (action (run ./prop_erasure.t.exe))))

(subdir unit_type
 (rule
  (targets unit_type.t.exe)
  (deps UnitType.vo unit_type.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} unit_type.t.exe unit_type.cpp unit_type.t.cpp)))
 (rule
  (alias runtest)
  (deps unit_type.t.exe)
  (action (run ./unit_type.t.exe))))

(subdir add_one
 (rule
  (targets add_one.t.exe)
  (deps AddOne.vo add_one.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} add_one.t.exe add_one.cpp add_one.t.cpp)))
 (rule
  (alias runtest)
  (deps add_one.t.exe)
  (action (run ./add_one.t.exe))))

(subdir args
 (rule
  (targets args.t.exe)
  (deps Args.vo args.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} args.t.exe args.cpp args.t.cpp)))
 (rule
  (alias runtest)
  (deps args.t.exe)
  (action (run ./args.t.exe))))

(subdir empty_match
 (rule
  (targets empty_match.t.exe)
  (deps EmptyMatch.vo empty_match.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} empty_match.t.exe empty_match.cpp empty_match.t.cpp)))
 (rule
  (alias runtest)
  (deps empty_match.t.exe)
  (action (run ./empty_match.t.exe))))

(subdir anon_fixpoint
 (rule
  (targets anon_fixpoint.t.exe)
  (deps AnonFixpoint.vo anon_fixpoint.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} anon_fixpoint.t.exe anon_fixpoint.cpp anon_fixpoint.t.cpp)))
 (rule
  (alias runtest)
  (deps anon_fixpoint.t.exe)
  (action (run ./anon_fixpoint.t.exe))))

(subdir comparison
 (rule
  (targets comparison.t.exe)
  (deps Comparison.vo comparison.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} comparison.t.exe comparison.cpp comparison.t.cpp)))
 (rule
  (alias runtest)
  (deps comparison.t.exe)
  (action (run ./comparison.t.exe))))

(subdir sum
 (rule
  (targets sum.t.exe)
  (deps Sum.vo sum.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} sum.t.exe sum.cpp sum.t.cpp)))
 (rule
  (alias runtest)
  (deps sum.t.exe)
  (action (run ./sum.t.exe))))

(subdir pstring
 (rule
  (targets pstring.t.exe)
  (deps PString.vo pstring.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} pstring.t.exe pstring.cpp pstring.t.cpp)))
 (rule
  (alias runtest)
  (deps pstring.t.exe)
  (action (run ./pstring.t.exe))))

(subdir nested_tree
 (rule
  (targets nested_tree.t.exe)
  (deps NestedTree.vo nested_tree.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} nested_tree.t.exe nested_tree.cpp nested_tree.t.cpp)))
 (rule
  (alias runtest)
  (deps nested_tree.t.exe)
  (action (run ./nested_tree.t.exe))))

(subdir polymorphic_helper
 (rule
  (targets polymorphic_helper.t.exe)
  (deps PolymorphicHelper.vo polymorphic_helper.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} polymorphic_helper.t.exe polymorphic_helper.cpp polymorphic_helper.t.cpp)))
 (rule
  (alias runtest)
  (deps polymorphic_helper.t.exe)
  (action (run ./polymorphic_helper.t.exe))))

(subdir sigma_assert
 (rule
  (targets sigma_assert.t.exe)
  (deps SigmaAssert.vo sigma_assert.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} sigma_assert.t.exe sigma_assert.cpp sigma_assert.t.cpp)))
 (rule
  (alias runtest)
  (deps sigma_assert.t.exe)
  (action (run ./sigma_assert.t.exe))))

(subdir acc_rect
 (rule
  (targets acc_rect.t.exe)
  (deps AccRect.vo acc_rect.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} acc_rect.t.exe acc_rect.cpp acc_rect.t.cpp)))
 (rule
  (alias runtest)
  (deps acc_rect.t.exe)
  (action (run ./acc_rect.t.exe))))

(subdir prim_proj
 (rule
  (targets prim_proj.t.exe)
  (deps PrimProj.vo prim_proj.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} prim_proj.t.exe prim_proj.cpp prim_proj.t.cpp)))
 (rule
  (alias runtest)
  (deps prim_proj.t.exe)
  (action (run ./prim_proj.t.exe))))

(subdir prim_rec_tc
 (rule
  (targets prim_rec_tc.t.exe)
  (deps PrimRecTc.vo prim_rec_tc.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} prim_rec_tc.t.exe prim_rec_tc.cpp prim_rec_tc.t.cpp)))
 (rule
  (alias runtest)
  (deps prim_rec_tc.t.exe)
  (action (run ./prim_rec_tc.t.exe))))

(subdir record_defaults
 (rule
  (targets record_defaults.t.exe)
  (deps RecordDefaults.vo record_defaults.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} record_defaults.t.exe record_defaults.cpp record_defaults.t.cpp)))
 (rule
  (alias runtest)
  (deps record_defaults.t.exe)
  (action (run ./record_defaults.t.exe))))

(subdir setoid_rw
 (rule
  (targets setoid_rw.t.exe)
  (deps SetoidRw.vo setoid_rw.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} setoid_rw.t.exe setoid_rw.cpp setoid_rw.t.cpp)))
 (rule
  (alias runtest)
  (deps setoid_rw.t.exe)
  (action (run ./setoid_rw.t.exe))))

(subdir universe_poly
 (rule
  (targets universe_poly.t.exe)
  (deps UniversePoly.vo universe_poly.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} universe_poly.t.exe universe_poly.cpp universe_poly.t.cpp)))
 (rule
  (alias runtest)
  (deps universe_poly.t.exe)
  (action (run ./universe_poly.t.exe))))

(subdir where_clause
 (rule
  (targets where_clause.t.exe)
  (deps WhereClause.vo where_clause.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} where_clause.t.exe where_clause.cpp where_clause.t.cpp)))
 (rule
  (alias runtest)
  (deps where_clause.t.exe)
  (action (run ./where_clause.t.exe))))

(subdir mutual_record
 (rule
  (targets mutual_record.t.exe)
  (deps MutualRecord.vo mutual_record.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} mutual_record.t.exe mutual_record.cpp mutual_record.t.cpp)))
 (rule
  (alias runtest)
  (deps mutual_record.t.exe)
  (action (run ./mutual_record.t.exe))))

(subdir comp_proof
 (rule
  (targets comp_proof.t.exe)
  (deps CompProof.vo comp_proof.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} comp_proof.t.exe comp_proof.cpp comp_proof.t.cpp)))
 (rule
  (alias runtest)
  (deps comp_proof.t.exe)
  (action (run ./comp_proof.t.exe))))

(subdir constrained_poly
 (rule
  (targets constrained_poly.t.exe)
  (deps ConstrainedPoly.vo constrained_poly.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} constrained_poly.t.exe constrained_poly.cpp constrained_poly.t.cpp)))
 (rule
  (alias runtest)
  (deps constrained_poly.t.exe)
  (action (run ./constrained_poly.t.exe))))

(subdir deep_patterns
 (rule
  (targets deep_patterns.t.exe)
  (deps DeepPatterns.vo deep_patterns.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} deep_patterns.t.exe deep_patterns.cpp deep_patterns.t.cpp)))
 (rule
  (alias runtest)
  (deps deep_patterns.t.exe)
  (action (run ./deep_patterns.t.exe))))

(subdir extract_directives
 (rule
  (targets extract_directives.t.exe)
  (deps ExtractDirectives.vo extract_directives.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} extract_directives.t.exe extract_directives.cpp extract_directives.t.cpp)))
 (rule
  (alias runtest)
  (deps extract_directives.t.exe)
  (action (run ./extract_directives.t.exe))))

(subdir large_enum
 (rule
  (targets large_enum.t.exe)
  (deps LargeEnum.vo large_enum.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} large_enum.t.exe large_enum.cpp large_enum.t.cpp)))
 (rule
  (alias runtest)
  (deps large_enum.t.exe)
  (action (run ./large_enum.t.exe))))

(subdir large_mutual
 (rule
  (targets large_mutual.t.exe)
  (deps LargeMutual.vo large_mutual.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} large_mutual.t.exe large_mutual.cpp large_mutual.t.cpp)))
 (rule
  (alias runtest)
  (deps large_mutual.t.exe)
  (action (run ./large_mutual.t.exe))))

(subdir mutual_recursion
 (rule
  (targets mutual_recursion.t.exe)
  (deps MutualRecursion.vo mutual_recursion.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} mutual_recursion.t.exe mutual_recursion.cpp mutual_recursion.t.cpp)))
 (rule
  (alias runtest)
  (deps mutual_recursion.t.exe)
  (action (run ./mutual_recursion.t.exe))))

(subdir nested_ind
 (rule
  (targets nested_ind.t.exe)
  (deps NestedInd.vo nested_ind.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} nested_ind.t.exe nested_ind.cpp nested_ind.t.cpp)))
 (rule
  (alias runtest)
  (deps nested_ind.t.exe)
  (action (run ./nested_ind.t.exe))))

(subdir nested_mod
 (rule
  (targets nested_mod.t.exe)
  (deps NestedMod.vo nested_mod.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} nested_mod.t.exe nested_mod.cpp nested_mod.t.cpp)))
 (rule
  (alias runtest)
  (deps nested_mod.t.exe)
  (action (run ./nested_mod.t.exe))))

(subdir sprop
 (rule
  (targets sprop.t.exe)
  (deps SProp.vo sprop.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} sprop.t.exe sprop.cpp sprop.t.cpp)))
 (rule
  (alias runtest)
  (deps sprop.t.exe)
  (action (run ./sprop.t.exe))))

(subdir let_fix
 (rule
  (targets let_fix.t.exe)
  (deps LetFix.vo let_fix.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} let_fix.t.exe let_fix.cpp let_fix.t.cpp)))
 (rule
  (alias runtest)
  (deps let_fix.t.exe)
  (action (run ./let_fix.t.exe))))

(subdir rec_record
 (rule
  (targets rec_record.t.exe)
  (deps RecRecord.vo rec_record.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} rec_record.t.exe rec_record.cpp rec_record.t.cpp)))
 (rule
  (alias runtest)
  (deps rec_record.t.exe)
  (action (run ./rec_record.t.exe))))

(subdir int63_arith
 (rule
  (targets int63_arith.t.exe)
  (deps Int63Arith.vo int63_arith.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} int63_arith.t.exe int63_arith.cpp int63_arith.t.cpp)))
 (rule
  (alias runtest)
  (deps int63_arith.t.exe)
  (action (run ./int63_arith.t.exe))))

(subdir mutual_indexed
 (rule
  (targets mutual_indexed.t.exe)
  (deps MutualIndexed.vo mutual_indexed.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} mutual_indexed.t.exe mutual_indexed.cpp mutual_indexed.t.cpp)))
 (rule
  (alias runtest)
  (deps mutual_indexed.t.exe)
  (action (run ./mutual_indexed.t.exe))))

(subdir cps
 (rule
  (targets cps.t.exe)
  (deps CPS.vo cps.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} cps.t.exe cps.cpp cps.t.cpp)))
 (rule
  (alias runtest)
  (deps cps.t.exe)
  (action (run ./cps.t.exe))))

(subdir higher_kinded
 (rule
  (targets higher_kinded.t.exe)
  (deps HigherKinded.vo higher_kinded.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} higher_kinded.t.exe higher_kinded.cpp higher_kinded.t.cpp)))
 (rule
  (alias runtest)
  (deps higher_kinded.t.exe)
  (action (run ./higher_kinded.t.exe))))

(subdir closures_in_data
 (rule
  (targets closures_in_data.t.exe)
  (deps ClosuresInData.vo closures_in_data.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} closures_in_data.t.exe closures_in_data.cpp closures_in_data.t.cpp)))
 (rule
  (alias runtest)
  (deps closures_in_data.t.exe)
  (action (run ./closures_in_data.t.exe))))

(subdir partial_apply
 (rule
  (targets partial_apply.t.exe)
  (deps PartialApply.vo partial_apply.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} partial_apply.t.exe partial_apply.cpp partial_apply.t.cpp)))
 (rule
  (alias runtest)
  (deps partial_apply.t.exe)
  (action (run ./partial_apply.t.exe))))

(subdir dep_elim
 (rule
  (targets dep_elim.t.exe)
  (deps DepElim.vo dep_elim.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} dep_elim.t.exe dep_elim.cpp dep_elim.t.cpp)))
 (rule
  (alias runtest)
  (deps dep_elim.t.exe)
  (action (run ./dep_elim.t.exe))))

(subdir ind_param
 (rule
  (targets ind_param.t.exe)
  (deps IndParam.vo ind_param.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} ind_param.t.exe ind_param.cpp ind_param.t.cpp)))
 (rule
  (alias runtest)
  (deps ind_param.t.exe)
  (action (run ./ind_param.t.exe))))

(subdir canon_struct
 (rule
  (targets canon_struct.t.exe)
  (deps CanonStruct.vo canon_struct.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} canon_struct.t.exe canon_struct.cpp canon_struct.t.cpp)))
 (rule
  (alias runtest)
  (deps canon_struct.t.exe)
  (action (run ./canon_struct.t.exe))))

(subdir dep_record
 (rule
  (targets dep_record.t.exe)
  (deps DepRecord.vo dep_record.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} dep_record.t.exe dep_record.cpp dep_record.t.cpp)))
 (rule
  (alias runtest)
  (deps dep_record.t.exe)
  (action (run ./dep_record.t.exe))))

(subdir singleton_record
 (rule
  (targets singleton_record.t.exe)
  (deps SingletonRecord.vo singleton_record.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} singleton_record.t.exe singleton_record.cpp singleton_record.t.cpp)))
 (rule
  (alias runtest)
  (deps singleton_record.t.exe)
  (action (run ./singleton_record.t.exe))))

(subdir coercions
 (rule
  (targets coercions.t.exe)
  (deps Coercions.vo coercions.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} coercions.t.exe coercions.cpp coercions.t.cpp)))
 (rule
  (alias runtest)
  (deps coercions.t.exe)
  (action (run ./coercions.t.exe))))

(subdir poly_inductive
 (rule
  (targets poly_inductive.t.exe)
  (deps PolyInductive.vo poly_inductive.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} poly_inductive.t.exe poly_inductive.cpp poly_inductive.t.cpp)))
 (rule
  (alias runtest)
  (deps poly_inductive.t.exe)
  (action (run ./poly_inductive.t.exe))))

(subdir string_match
 (rule
  (targets string_match.t.exe)
  (deps StringMatch.vo string_match.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} string_match.t.exe string_match.cpp string_match.t.cpp)))
 (rule
  (alias runtest)
  (deps string_match.t.exe)
  (action (run ./string_match.t.exe))))

(subdir sections
 (rule
  (targets sections.t.exe)
  (deps Sections.vo sections.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} sections.t.exe sections.cpp sections.t.cpp)))
 (rule
  (alias runtest)
  (deps sections.t.exe)
  (action (run ./sections.t.exe))))

(subdir vec
 (rule
  (targets vec.t.exe)
  (deps Vec.vo vec.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} vec.t.exe vec.cpp vec.t.cpp)))
 (rule
  (alias runtest)
  (deps vec.t.exe)
  (action (run ./vec.t.exe))))

(subdir opaque
 (rule
  (targets opaque.t.exe)
  (deps Opaque.vo opaque.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} opaque.t.exe opaque.cpp opaque.t.cpp)))
 (rule
  (alias runtest)
  (deps opaque.t.exe)
  (action (run ./opaque.t.exe))))

(subdir program_fixpoint
 (rule
  (targets program_fixpoint.t.exe)
  (deps ProgFix.vo program_fixpoint.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} program_fixpoint.t.exe program_fixpoint.cpp program_fixpoint.t.cpp)))
 (rule
  (alias runtest)
  (deps program_fixpoint.t.exe)
  (action (run ./program_fixpoint.t.exe))))

(subdir equations
 (rule
  (targets equations.t.exe)
  (deps Equations.vo equations.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} equations.t.exe equations.cpp equations.t.cpp)))
 (rule
  (alias runtest)
  (deps equations.t.exe)
  (action (run ./equations.t.exe))))
(subdir wrapper_collision_pos
 (rule
  (targets wrapper_collision_pos.t.exe)
  (deps WrapperCollisionPos.vo wrapper_collision_pos.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} wrapper_collision_pos.t.exe wrapper_collision_pos.cpp wrapper_collision_pos.t.cpp)))
 (rule
  (alias runtest)
  (deps wrapper_collision_pos.t.exe)
  (action (run ./wrapper_collision_pos.t.exe))))

(subdir wrapper_decl_merge
 (rule
  (targets wrapper_decl_merge.t.exe)
  (deps WrapperDeclMerge.vo wrapper_decl_merge.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} wrapper_decl_merge.t.exe wrapper_decl_merge.cpp wrapper_decl_merge.t.cpp)))
 (rule
  (alias runtest)
  (deps wrapper_decl_merge.t.exe)
  (action (run ./wrapper_decl_merge.t.exe))))

(subdir func_only_submodule
 (rule
  (targets func_only_submodule.t.exe)
  (deps FuncOnlySubmodule.vo func_only_submodule.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} func_only_submodule.t.exe func_only_submodule.cpp func_only_submodule.t.cpp)))
 (rule
  (alias runtest)
  (deps func_only_submodule.t.exe)
  (action (run ./func_only_submodule.t.exe))))

(subdir forward_spec_ascii
 (rule
  (targets forward_spec_ascii.t.exe)
  (deps ForwardSpecAscii.vo forward_spec_ascii.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} forward_spec_ascii.t.exe forward_spec_ascii.cpp forward_spec_ascii.t.cpp)))
 (rule
  (alias runtest)
  (deps forward_spec_ascii.t.exe)
  (action (run ./forward_spec_ascii.t.exe))))

(subdir signature_parity_fix
 (rule
  (targets signature_parity_fix.t.exe)
  (deps SignatureParityFix.vo signature_parity_fix.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} signature_parity_fix.t.exe signature_parity_fix.cpp signature_parity_fix.t.cpp)))
 (rule
  (alias runtest)
  (deps signature_parity_fix.t.exe)
  (action (run ./signature_parity_fix.t.exe))))

(subdir bool_dec_std
 (rule
  (targets bool_dec_std.t.exe)
  (deps BoolDecStd.vo bool_dec_std.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} bool_dec_std.t.exe bool_dec_std.cpp bool_dec_std.t.cpp)))
 (rule
  (alias runtest)
  (deps bool_dec_std.t.exe)
  (action (run ./bool_dec_std.t.exe))))

(subdir bool_dec_bde
 (rule
  (targets bool_dec_bde.t.exe)
  (deps BoolDecBde.vo bool_dec_bde.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} bool_dec_bde.t.exe bool_dec_bde.cpp bool_dec_bde.t.cpp)))
 (rule
  (alias runtest)
  (deps bool_dec_bde.t.exe)
  (action (run ./bool_dec_bde.t.exe))))

(subdir move_capture_reuse
 (rule
  (targets move_capture_reuse.t.exe)
  (deps MoveCaptureReuse.vo move_capture_reuse.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} move_capture_reuse.t.exe move_capture_reuse.cpp move_capture_reuse.t.cpp)))
 (rule
  (alias runtest)
  (deps move_capture_reuse.t.exe)
  (action (run ./move_capture_reuse.t.exe))))
